# replicat

./: Cargo.toml  README.md  build.rs
proto/: raft_rpc.proto
src/: client.rs  lib.rs  main.rs
src/rpc/: client.rs  mod.rs  raft.rs  rpc_models.rs  server.rs
src/storage/: from_row_impl.rs  mod.rs  models.rs  params.rs  raft.rs
