[package]
name = "replicat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
flume = "0.10.14"
async-trait = "0.1.58"
rmp-serde = "1.1.1"
parking_lot = "0.12.1"
tracing = "0.1.37"
tracing-futures = "0.2.5"
humansize = "2.1.0"
tonic = "0.8.0"
prost = "0.11.0"
futures-lite = "1.12.0"

openraft = { git = "https://github.com/datafuselabs/openraft.git", rev = "cb2985", features = ["serde"] }
tokio = { version = "1", features = ["rt", "sync"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tracing-subscriber = "0.3.16"

uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.8.0"
prost-build = "0.11.1"
